Expose Transaction creation activity
